feature(poc): init poc

--- a/packages/ui/turbo/generators/templates/component.hbs
+++ b/packages/ui/turbo/generators/templates/component.hbs
@@ -1,14 +1,14 @@
-import * as React from "react";
+import type { ReactNode } from 'react';
 
-interface Props {
-  children?: React.ReactNode;
+export interface {{ pascalCase name }}Props {
+    children?: ReactNode;
 }
 
-export const {{ pascalCase name }} = ({ children }: Props) => {
-  return (
-    <div>
-      <h1>{{ name }}</h1>
-      {children}
-    </div>
-  );
-};
+export default function {{ pascalCase name }} ({ children }: {{ pascalCase name }}Props) {
+    return (
+        <>
+            <h1>{{ pascalCase name }}</h1>
+            {children}
+        </>
+    );
+}
