refactor(generator): refine component generators

--- a/packages/ui/turbo/generators/templates/component.hbs
+++ b/packages/ui/turbo/generators/templates/component.hbs
@@ -7,7 +7,7 @@ export interface {{ pascalCase name }}Props {
 export default function {{ pascalCase name }} ({ children }: {{ pascalCase name }}Props) {
     return (
         <>
-            <h1>{{ pascalCase name }}</h1>
+            <h1>{{ pascalCase name }} Component</h1>
             {children}
         </>
     );
