--- a/packages/ui/turbo/generators/templates/styleguide.hbs
+++ b/packages/ui/turbo/generators/templates/styleguide.hbs
@@ -13,12 +13,12 @@ export default {
 
 export const StateOne = {
     args: {
-        children: 'Hello 1'
+        children: 'State 1'
     }
 };
 
 export const StateTwo = {
     args: {
-        children: 'Hello 2'
+        children: 'State 2'
     }
 };
